
package bbproto;

//用户发送登录消息
//#define OGID_TEXASPOKER_MATCHLIST_LOGIN						(OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x000000002)
option optimize_for = LITE_RUNTIME;

message MatchList_Login
{
	optional bytes ticket	= 1;	//TICKET登录
	optional bytes username = 2;	//用户名
	optional bytes password = 3;	//密码
	optional bytes userip	= 4;	//用户IP
	optional int32 LoginMode   = 5;	//登录模式
	optional int32 cmStatus	   = 6; //防沉迷状态
	optional int32 comefromid  = 7; //渠道号
}

message MatchList_AckLogin
{
	optional int32 result = 1;		//登录结果
	optional bytes cert = 2;		//证书
	optional bytes rolename = 3;	//角色名
}

message OGREQUserAuth
{
	optional bytes ticket = 1;		//TICKET登录
	optional bytes username = 2;		//用户名
	optional bytes password = 3;		//密码
	optional bytes userip = 4;		//用户IP
	optional int32 flags = 5 [default=0]; //标志位,(渠道号) 
	optional int32 ticketType = 6 [default=0]; //0为ticket，1为短时效证书。
	optional int32 cmStatus = 7 [default=0]; // 防沉迷状态  0-被防成谜   1-不需要被防沉迷
}

//用户认证应答
message OGACKUserAuth
{
	optional int32 result = 1;
	optional bytes cert = 2;		//用户证书字节流
	optional bytes kcdata = 3;		//KC等用户数据字节流
 	optional bytes username = 4;	//用户名，用于异步通信
}

message MatchList_SendPlayerCount
{
 	optional int32 playercount = 1;  
}

//客户端给列表发送渠道昵称
message MatchList_CFUserName
{
	optional bytes username = 1;
	optional bytes sCFUserName = 2; //该渠道特有昵称（现在专指360）
}

//#define OGID_TEXASPOKER_MATCHLIST_SEARCHMATCH				(OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x000000003)
message MatchList_SearchMatch
{
	optional int32 MatchMode = 1;			//选择比赛的模式
	optional int32 TableMode = 2;			//多桌，单桌，单挑
	optional int32 PlanetMode = 3;			//是否卫星赛
	optional int32 SignMode = 4;			//报名模式
	optional int32 ClassMode = 5;			//级别模式
	optional int32 Mask = 6;				//哪个模式生效
}

//常规桌盲注限制、进入玩家金币限制
message MatchList_CGZEnterLimit
{
	optional int32 LimitID = 1;				//限制ID，1：新手区 2：初级区 3：中级区 4：高级区
	optional int64 MinBlind = 2;			//最小盲注限制
	optional int64 MaxBlind = 3;			//最大盲注限制
	optional int64 MinCoin = 4;				//最小金币限制
	optional int64 MaxCoin = 5;				//最大金币限制
}	
//(发送给客户端)常规桌盲注限制列表 * yanhp add 2012-5-30 *
message MatchList_CGZEnterLimitInfo
{
	repeated MatchList_CGZEnterLimit LimitDataList = 1;
}

//(客户端请求)请求加入新手区
message MatchList_ReqEnterNoviceMatch
{
	optional int32 nEnterType = 1;			//进入类型：1：点开始游戏进入 2:10秒后再自动分桌
	optional bytes UserName = 2;
	optional int64 Coin = 3;
}
//(应答客户端)进入新手区，开始游戏
message MatchList_AckEnterNoviceMatch
{
	optional int32 Reslut = 1;				//进入结果，0：成功 1：金币低于新手区限制 2：金币高于新手区限制
	optional bytes MatchID = 2;
	optional int32 Tableid = 3;
	optional int32 Seat = 4;
	optional int32 GameServerIP = 5;		//游戏服务器IP
	optional int32 GameServerPort = 6;		//游戏端口
}

//(客户端请求)请求新手区在线人数
message Match_ReqNoviceOnLinePlyCnt
{
}
//(应答客户端)新手区在线人数
message Match_AckNoviceOnLinePlyCnt
{
	optional int32 OnLinePlyCnt = 1;	
}

message MatchList_BlindInfo
{
	optional int32 BlindClass = 1;
	optional int64 SmallBlind = 2;
	optional int64 BigBlind = 3;
	optional int32 BlindTime = 4;
}

message MatchList_PreChipInfo
{
	optional int32 PrechipClass = 1;
	optional int64 PrechipValue = 2;
}

message MatchList_MatchData
{
	optional bytes MatchName = 1;	//比赛名称
	optional bytes MatchID = 2;	//比赛ID
	optional int32 MaxPlayer = 3;	//最大参赛人数
	optional int32 MatchStatus = 4;	//比赛状态，0表示刚发布，还不能报名，1表示报名中，2表示进行中，3表示已结束
	optional int32 GameType = 5;	//比赛类型，0表示不限注，1表示限注，2表示底池限注
	optional int64 SignFee = 6;		//报名费
	optional int64 Charge = 7;		//手续费
	optional int32 Rebuy = 8;		//是否能REBUY
	optional int32 DoubleStack = 9;	//是否双倍筹码
	optional int32 SuperStack = 10;	//是否三倍筹码
	optional int32 Turbo = 11;		//是否快速盲注
	optional int32 SurperTurbo = 12;//是否超速盲注
	optional int32 Knockout = 13;	//是否杀人模式
	optional int32 SignPlayer = 14;	//目前已报名的人数
	optional int32 MatchMode = 15;	//0表示坐满就玩，1表示竞标赛,2为现金桌，3为朋友桌
	optional int32 TableMode = 16;	//0多桌，1单桌，2单挑
	optional int32 PlanetMode = 17;	//0不是卫星赛，1是卫星赛
	optional int32 SignMode = 18;	//0表示用积分报名，1是用金币报名
	optional int32 ClassMode = 19;	//-1表示无效，0是免费，1是微型，2是低级，3是中级，4是高级，5是至尊赛
	optional bytes StartTime = 20;	//比赛开始时间
	optional int32 DualTime = 21;	//比赛已持续时间
	optional int32 StartBlindClass = 22;	//盲注开始级别
	optional int32 MaxBlindClass = 23;		//盲注最高级别
	optional int32 BlindTime = 24;			//盲注变化时间
	optional int32 BlindClassToPreChip = 25;		//什么盲注级别开始有前注
	optional int32 MaxPrechipClass = 26;			//前注最高级别
	repeated MatchList_BlindInfo BlindInfo = 27;				//盲注信息
	repeated MatchList_PreChipInfo PreChipInfo = 28;			//前注信息
	optional int64	CreateTime = 29;							//比赛创建时间
	optional int64	InitChip = 30;								//比赛初始筹码
	optional int32	MinPlayer = 31;								//比赛最小人数
	optional int32	CheckSum = 32;								//比赛ID的CHECKSUM值
}

message MatchList_SearchResult
{
	repeated MatchList_MatchData MatchData = 1;
}


message MatchList_Reward
{
	optional int32 Type = 1;
	optional int32 Rank = 2;
	optional int64 Value = 3;
	optional bytes RewardName = 4;
}

message MatchList_SendReward
{
	repeated MatchList_Reward Reward = 1;
	optional int64	TotalReward = 2;
	optional bytes MatchID = 3;
}

message MatchList_PlayerInfo
{
	optional bytes UserName = 1;
	optional int64 Coin = 2;
	optional int32 Rank = 3;
	optional int32 Table = 4;
	optional bytes sCFUserName= 5; //该渠道特有昵称（现在专指360）
}

message MatchList_SendPlayerInfo
{
	repeated MatchList_PlayerInfo PlayerInfo = 1;
	optional bytes MatchID = 2;
}

message MatchList_SendMatchChangeInfo
{
	optional int32	RestTime = 1;
	optional int64	SmallBlind = 2;
	optional int64	BigBlind = 3;
	optional int64	NextSmallBlind = 4;
	optional int64	NextBigBlind = 5;
	optional int32	BlindTime = 6;
	optional bytes MatchID = 7;
}

message MatchList_SendMatchCoinInfo
{
	optional int64	MaxCoin = 1;
	optional int64 	MinCoin = 2;
	optional int64 	AvgCoin = 3;
	optional bytes MatchID = 4;
}

message MatchList_TableInfo
{
	optional int32	Talbe = 1;	
	optional int32	PlayerCount = 2;
	repeated MatchList_PlayerInfo PlayerInfo = 3;
	optional int64  MaxCoin = 4;
	optional int64  MinCoin = 5;
}

message MatchList_SendTableInfo
{
	repeated MatchList_TableInfo TableInfo = 1;
	optional bytes MatchID = 2;
}

message MatchList_EnterMatch
{
	optional bytes MatchID = 1;
}

message MatchList_AckEnterMatch
{
	optional MatchList_MatchData MatchData = 1;
}

message MatchList_LeaveMatch
{
	optional bytes MatchID = 1;
}

message MatchList_SignMatch
{
	optional bytes MatchID = 1;
	optional bytes UserName = 2;
	optional int32  Type = 3;		//0表示报名，1表示退赛
	optional int32 SignType = 4;	//报名类型 金币：0x0001  免费: 0x0008 门票: 0x0010
}

message MatchList_AckSignMatch
{
	optional bytes MatchID = 1;
	optional bytes UserName = 2;
	optional int32 Type = 3;			//0报名，1退赛
	optional int64 Coin = 4;			//金币数
	optional int64 Score = 5;			//积分数
	optional int32 result = 6;			//0表示成功，1失败
	optional int64 MatchCoin = 7;		//比赛通币数
	optional int64 ticketCount = 8;		//门票数量
}

//报告人数及自己的IP端口信息
message MatchList_ReportPlayer
{
	optional int32 IP = 1;
	optional int32 Port = 2;
	optional int32 ServerType = 3;	//0表示比赛列表服务器，1表示游戏服务器
	optional int32 Player = 4;		//人数
}

//MATCHLIST服务器通知用户开始比赛
message MatchList_NotifyStartMatch
{
	optional bytes matchid = 1;			//比赛ID
	optional int32	tableid = 2;			//桌号
	optional int32	GameServerIP = 3;		//游戏服务器IP
	optional int32	GameServerPort = 4;		//游戏端口
}

//通知比赛定时变化的信息,含人数变化，时间变化
message MatchList_MatchChangeInfo
{
	optional bytes matchid = 1;			//比赛ID
	optional int32 nMaxPlayer = 2;			//最大参赛人数
	optional int32 nSignPlayer = 3;			//已报名比赛人数
	optional bytes StartTime = 4;			//开始时间
	optional int32  DualTime = 5;			//持续时间
	optional int32	MatchStatus = 6;		//比赛状态，0表示刚发布，还不能报名，1表示报名中，2表示进行中，3表示已结束
}

message MatchList_NotifyMatchPlayer
{
	repeated MatchList_MatchChangeInfo MatchInfo = 1;
}

//从DB获取某个用户的信息
message MatchList_GetUserInfo
{
	optional bytes username = 1;
}

message MatchList_AckGetUserInfo
{
	optional bytes username = 1;			//用户名
	optional int64	gold = 2;				//元宝数
	optional int64	Coin = 3;				//金币数
	optional int64	Score = 4;				//积分数
	optional int64	MatchCoin = 5;			//比赛通币数
}

//发送和自己相关的报名信息
message MatchList_SendSignInfo
{
	repeated bytes matchid = 1;
}

//客户端发送选择比赛列表进入
message MatchList_SendEnterSignedMatch
{
	optional bytes matchid = 1;
}

//发送旁观比赛消息
message MatchList_WatchMatch
{
	optional bytes matchid = 1;
	optional int32	tableid = 2;
}

//发送比赛状态变化消息
message MatchList_NotifyMatchStatus
{
	optional bytes matchid = 1;
	optional int32 matchstatus = 2;
}

//发送新增比赛消息
message MatchList_NewMatch
{
	repeated MatchList_MatchData MatchData = 1;
}

//发送服务器时间
message MatchList_SendServerTime
{
	optional bytes servertime = 1;
}

//发送在线人数
message MatchList_SendOnLineCount
{
	optional int32	OnLineCount = 1;
	optional int32  TableCount = 2;
}

//取用户的账户信息
message MatchList_GetUserCoinInfo
{
	optional bytes username		= 1;
	optional bytes sCFUserName	= 2;			//该渠道特有昵称（现在专指360）
}

message MatchList_AckGetUserCoinInfo
{
	optional	int32	result = 1;				//0表示成功,其他表示失败
	optional	bytes	username = 2;
	optional	int64	Gold = 3;				//元宝数		
	optional	int64	Coin = 4;				//金币数
	optional	int64	GameCoin = 5;			//游戏中的金币数
	optional	bytes	BuyCoinUrl = 6;			//购买金币的URL
	optional	bytes	BuyGoldUrl = 7;			//购买元宝的URL
	optional	bytes	ShopUrl = 8;			//商城URL
	optional	int64	score = 9;				//积分数
	
}

message MatchList_NewSearchMatch
{
	optional	int32	MatchCount = 1;				//比赛个数
	optional	int32	MatchDadaLen = 2;			//比赛数据长度
	optional	bytes	MatchData = 3;				//比赛数据
}

message MatchList_NewNotifyMatchPlayer				//新的下发比赛人数变化信息
{
	optional	int32	Count = 1;
	optional	bytes	MatchData = 2;
}

//新的新增比赛消息
message MatchList_NewAddNewMatch
{
	optional	bytes	MatchData = 1;
}

//用户收到该消息后，按要求从服务器取数据
message MatchList_BroadCastMsg
{
	optional	int32	type = 1;					//广播的类型,目前值为0，表示有新比赛的时候广播，用户取该比赛的数据，1比赛置顶属性,2修改配置
	optional	int32	MatchIdCheckSum = 2;		//比赛ID的CHECKSUM值
}

//用户从服务器取广播数据
message MatchList_GetBoradcastData
{
	optional	int32	type = 1;
	optional	int32	MatchIDCheckSum = 2;
}

message MatchList_SvrInfo
{
	optional	int32	IP = 1;
	optional	int32	Port = 2;
	optional	int32	Player = 3;
}
//通知用户比赛列表信息
message MatchList_SendMatchlistSvrInfo
{
	optional	int32	result = 1;					//result = 0表示确认连接成功，其他表示失败
	repeated	MatchList_SvrInfo	svrInfo = 2;	//所有的MATCHLIST的信息
}

message MatchList_GetRoleResult
{
	optional	int32	result = 1;					//result = 0表示取角色名成功，其他表示失败
}

message MatchList_CheckRoleName
{
	optional	bytes	rolename = 1;
}

message MatchList_CheckRoleNameResult				
{
	optional	int32	result = 1;					//result = 0检查角色名通过，1表示角色名不合法，2表示角色名已存在
}

//创建角色消息
message MatchList_CreateRole
{
	optional	string	rolename = 1;				
}

message MatchList_CreateRoleResult
{
	optional	int32	result = 1;					//result = 0表示创建角色成功，其他表示创建角色失败
}

message MatchList_DelMatch
{
	optional	bytes	MatchID = 1;				//被删除比赛的CHECKSUM值
}

message MatchList_GetGameUserInfo
{
	optional	bytes	MatchID = 1;
}

message MatchList_GameUserInfo
{
	optional bytes		UserName = 1;
	optional int64		nCoin = 2;
	optional bytes		sCFUserName  = 3;//该渠道特有昵称（现在专指360）
}

message MatchList_AckGetGameUserInfo
{
	optional	bytes	MatchID = 1;
	repeated	MatchList_GameUserInfo	UserInfo = 2;	
	optional	int32	FlopRate = 3;			//平均进锅率
	optional	int32	GameCountPerHour = 4;	//每小时盘数
	optional	int64	AvgPool = 5;			//平均底池	
}

message MatchList_MatchTopInfo				//置顶属性消息
{
	optional	bytes	MatchID = 1;
	optional	int32	nTopIndex = 2;		//排在置顶的第几位
	optional	int32	nTopColor = 3;		//置顶的颜色
}
message MatchList_ModifyConfig				//修改配置
{
	optional	bytes	MatchID = 1;
	optional	int32	  nType   = 2;	//类型,0为未知,1为修改了牌桌名称,2为修改了大，小盲注，3为改密码
	optional	int64 nBigBlind = 3;	//大盲
	optional  int64 nSmallBlind = 4;	//小盲
	optional  bytes TableName = 5;		//牌桌名称
	optional int32  bPassWord  = 6;		//是否有密码
	optional int64  prechip = 7;		//前注
}
message OGMatchList_MatchInfos
{
	optional bytes MatchID		= 1;
	optional int64 nTableID		= 2;	//牌桌ID
	optional int64 nBeginTime	= 3;	//朋友桌的开始时间
	optional int64 nEndTime		= 4;	//朋友桌的结束时间
	optional bytes sCreater	= 5;	//本桌的创建者
	optional int32  bPassWord = 6;		//是否有密码
	optional int64  nHYDValue = 7;		//累计活跃度
}

//客户端需要知道的部分配置信息
//#define OGID_TEXASPOKER_MATCHLIST_CONFIGINFO	 (OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x000000030)
message OGMatchList_ConfigInfo
{
	optional int64 nHornValue				= 1;	//小喇叭费用
	optional int64 nPresent_MaxCoin_Times	= 2;	//每次赠送量有最大限制
	optional int64 nPresent_MaxTimes_Day	= 3;	//每天创建者赠送次数有最大限制
	optional int64 nPresent_MaxTimes_User	= 4;	//创建者针对一个玩家最大可以赠送多少次
	optional int64 nPresent_ChipToCoin		= 5;	//1筹码兑换金币数（朋友桌）
}

//赠送礼物
//#define OGID_TEXASPOKER_MATCHLIST_GIVEGIFT	 (OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x000000031)
message OGMatchList_GiveGift
{
	optional bytes customerName = 1;    //买主的角色名
	optional bytes giftId = 2;			//礼物ID
	optional bytes receivers = 3;		//接受者的角色名
}

//赠送道具
//#define OGID_TEXASPOKER_MATCHLIST_GIVEITEM	 (OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x000000032)
message OGMatchList_GiveItem
{
	optional bytes customRoleName = 1;	//买主的角色名
	optional bytes itemID = 2;			//道具ID
	optional bytes receivers = 3;		//接受者的角色名
}

//请求排行榜信息
//#define OGID_TEXASPOKER_MATCHLIST_USER_COIN_RNK_LIST_REQ (OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x000000033)
//#define OGID_TEXASPOKER_MATCHLIST_USER_COIN_RNK_LIST_ACK (OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x000000034)
message OGMatchList_UserCoinRnkListAck
{
	message UserCoinInfo
	{
		optional bytes sRoleName	= 1;		//(360平台指渠道昵称，其它平台指角色名)
		optional int64	nCoin		= 2;
	}
	repeated UserCoinInfo userRnkList = 1;
}

//请求新闻广告信息
//#define OGID_TEXASPOKER_MATCHLIST_BROADCAST_NEWS_REQ (OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x000000035)
//#define OGID_TEXASPOKER_MATCHLIST_BROADCAST_NEWS_ACK (OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x000000036)
message OGMatchList_BroadCast_News
{
	message NewsInfo
	{
		optional bytes news_title = 1;			//新闻标题
		optional bytes news_url = 2;			//新闻地址
		optional int32 news_type = 3;			//新闻类型 1为文字类，2为图片类
		optional int32 news_topd = 4;			//置顶级别1-10,  10级为最高置顶
	}
	repeated NewsInfo newslist = 1;
}

//#define OGID_TEXASPOKER_MATCHLIST_PROPERTY  	 (OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x00000003B)
message OGMatchList_Property
{
	message Property
	{
		optional bytes MatchID		= 1;	//比赛id
		optional bytes entryUrl		= 2;	//列表头奖励图片
	}
	repeated Property plist = 1;
}

//客户端请求all in 场
message OGMatchList_AllInMatchListReq
{
	optional bytes MatchID		= 1;		//比赛id，为0时请求所有match
}

//ALL In场比赛列表
message OGMatchList_AllInMatchListAck
{
	repeated bytes MatchID		= 1;		//比赛id
}


//客户端请求兑换短证书
//#define OGID_USER_LONGCERT_TO_SHORT							(OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x00000003E)
//optional int32  webType = 2;    //网页类型，1商城，2朋友桌管理，3朋友桌设置，4更改朋友桌密码
//optional int32  webType = 4;  //网页类型，1商城，2朋友桌管理，3朋友桌设置，4更改朋友桌密码
message OGMatchList_UserLongCertToShortReq
{
	optional bytes userip	= 1;	//用户IP 
}
message OGMatchList_UserLongCertToShortAck
{
	optional int32 result = 1;		//结果  0成功   其他失败
	optional bytes shortcert = 2;	//证书
	optional bytes rolename = 3;	//角色名 
	
}

//认证服务长证书换取短证书
//#define OGID_USER_GET_SHORTCERT							(OGID_MSGBASE_GAMEUSERDBSVR + 20)
message OGReqUserGetShortCert
{
   optional bytes ticket = 1;                //长证书
   optional bytes username = 2;				 //账号名
   optional bytes userIp = 4;                //用户IP
   optional int32 flags = 5;                 //渠道号 
   
}
message OGAckUserGetShortCert
{
   optional int32 result = 1;      						//认证结果
   optional string userName = 2;              //用户名
   optional bytes shortCert = 3;           	//短证书
	 optional int32 flags = 4 [default=0]; 			//标志位(渠道号)，10为发证书，200-219发默认证书。
   optional int32 cmStatus = 5 [default=0]; 	// 防沉迷状态  0-被防成谜   1-不需要被防沉迷
}

//web客户端定时请求match的玩家、牌桌信息
//#define OGID_TEXASPOKER_MATCHLIST_MATCHSTATEINFO			(OGID_MSGBASE_TEXASPOKER_MATCHLISTBASE + 0x00000003F) 
message OGReqMatchStateInfo
{
	optional bytes MatchID		= 1;		//比赛id
}

//（移动类型客户端）请求大小盲注、最大最小带入列表
message MatchList_ReqMobileBlindList
{
	optional bytes rolename = 1;			//玩家角色名
	optional int64 coin = 2;				//玩家金币
}
//应答
message MatchList_AckMobileBlindList
{
	message MobileBlind
	{
//		optional bytes MatchName    = 1;			//比赛名称
       	optional int64 SmallBlind   = 1;
       	optional int64 BigBlind     = 2;
       	optional int32 Enable       = 3;   // 非0——不能选择
//       	optional int64 MinChip      = 5;   // 最小带入筹码
//       	optional int64 MaxChip      = 6;   // 最大带入筹码
	}
	repeated MobileBlind mobileblindlist = 1;
}

//(移动类型客户端)请求比赛列表
message MatchList_ReqMobileMatchList
{
	optional bytes rolename = 1;			//玩家角色名
	optional int64 coin = 2;				//玩家金币
	optional int64 SmallBlind = 3;
	optional int64 BigBlind = 4;
}
//应答
message MatchList_AckMobileMatchList
{
	message MobileMatch
	{
		optional bytes MatchID = 1;				//比赛ID
		optional bytes MatchName = 2;			//比赛名称
		optional int32 MatchMode = 3;			//比赛模式 0表示坐满就玩，1是竞标赛，2是现金桌
		optional int32 MaxPlayer = 4;			//最大人数（几人桌）
		optional int32 CurPlayer = 5;			//当前人数
		optional int32 TableID   = 6;			//Tableid
		repeated MatchList_BlindInfo BlindInfo = 7;				//盲注信息
		repeated MatchList_PreChipInfo PreChipInfo = 8;			//前注信息
		optional int32 GameServerIP = 9;		//游戏服务器IP
		optional int32 GameServerPort = 10;		//游戏端口
		optional int32 nField = 11;				//场区类型
	}
	repeated MobileMatch mobilematchlist = 1;
}

//根据证书登陆列表服
message MatchList_LoginSpe
{
   optional bytes Letter    = 1;			//证书
   optional int32 LoginMode = 2;			//登陆模式(移动端发1)
}

//移动端请求朋友桌列表
message MatchList_FriendMatchListReq
{
    optional int32 nKey      = 1;              //key值（是默认情况，大于是定制版）
    optional int32 nCurPage = 2;              //当前页数
    optional int32 nNeedPage = 3;             //需要页数 
    optional int32 nRecord   = 4;             //每页条数
    optional bytes rolename = 5;              //角色名
} 
//应答
message MatchList_FriendMatchListAck
{
    message FriendMatchInfo
    {
       optional bytes MatchID = 1;            //比赛ID
       optional bytes MatchName = 2;          //比赛名称
       optional int32 MaxPlayer = 3;          //最大人数（几人桌）
       optional int32 CurPlayer = 4;          //当前人数
       optional int32 TableID   = 5;          //Tableid
       optional int32 nBeLock   = 6;          //是否有密码(0没有1有)
       repeated MatchList_BlindInfo BlindInfo = 7;             //盲注信息
       repeated MatchList_PreChipInfo PreChipInfo = 8;         //前注信息
       optional int32 GameServerIP = 9;       //游戏服务器IP
       optional int32 GameServerPort = 10;    //游戏端口
    }
    repeated FriendMatchInfo FriendMatchList = 1;
    optional int32 nRecordNum  = 2;   		 //总记录条数
}

//移动端定时请求朋友桌信息
message MatchList_ReqFriendMatchInfoInTime
{
    optional int32 nKey      = 1;              //key值（是默认情况，大于是定制版）
    optional int32 nCurPage = 2;              //当前页数
    optional int32 nNeedPage = 3;             //需要页数 
    optional int32 nRecord   = 4;             //每页条数
    optional bytes rolename = 5;              //角色名
}
//应答
message MatchList_AckFriendMatchInfoInTime
{
    message FriendMatchInfoInTime
    {
       optional bytes MatchID = 1;            //比赛ID
       optional int32 CurPlayer = 2;          //当前人数
    }
    repeated FriendMatchInfoInTime FriendMatchList = 1;
}

